--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <ul class="scenes">
     
       <a href="javascript:void(0)" class="scene" data-id="0-lacy-and-schafer-homes">
-        <li class="text">Lacy and Schafer homes</li>
+        <li class="text">Lacy and Schafer homes - Nov 2025</li>
       </a>
     
   </ul>
